add apikey, add sip client, update frontend to v2
